--- a/pom.xml
+++ b/pom.xml
@@ -28,19 +28,19 @@
   </dependencies>
 
   <build>
-    <finalName>cynteka_test</finalName>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.5.0</version>
-
         <configuration>
+          <archive>
+            <manifest>
+              <mainClass>ru.cynteka.grebnev.Main</mainClass>
+            </manifest>
+          </archive>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
         </configuration>
-
         <executions>
           <execution>
             <id>make-assembly</id>
@@ -50,7 +50,6 @@
             </goals>
           </execution>
         </executions>
-
       </plugin>
     </plugins>
   </build>
